test2-2024-08-04.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.8302 seconds

  ----Wall Time----  ----Name----
    0.8285 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.7848 ( 94.5%)    Parse modules
    0.0018 (  0.2%)  Rest
    0.8302 (100.0%)  Total

{
  totalTime: 0.843,
  maxMemory: 171720704
}
